--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,3 +58,4 @@ repos:
         require_serial: true
         language: system
         types: [python]
+        exclude: ^vendor|^parsers|^sources
