chore: updated needs in publish workflow

--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -151,7 +151,7 @@ jobs:
         path: dist
   publish:
     name: Publish Python package
-    needs: [build-wheels]
+    needs: [build-sdist, build-wheels]
     runs-on: ubuntu-latest
     environment:
       name: pypi
