--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,13 @@ repos:
       - id: check-toml
       - id: check-case-conflict
       - id: detect-private-key
+  - repo: https://github.com/tillig/json-sort-cli
+    rev: v2.0.2
+    hooks:
+      - id: json-sort
+        args:
+          - --autofix
+          - --insert-final-newline=true
   - repo: https://github.com/rbubley/mirrors-prettier
     rev: "v3.4.2"
     hooks:
@@ -54,7 +61,7 @@ repos:
     hooks:
       - id: mypy
         name: mypy
-        entry: uv run mypy
+        entry: uv run --no-sync mypy
         require_serial: true
         language: system
         types: [python]
