test: Windows CI Test

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,8 +10,12 @@ on:
 
 jobs:
   clone_vendors:
-    name: Clone vendors
-    runs-on: ubuntu-latest
+    name: Clone vendors (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -35,20 +39,25 @@ jobs:
     - name: Install Dependencies
       run: uv sync --no-install-project
 
+    - name: Create parsers directory
+      run: mkdir -p parsers
+
     - name: Clone vendors
-      run: |
-        mkdir parsers
-        uv run --no-sync scripts/clone_vendors.py
+      run: uv run --no-sync scripts/clone_vendors.py
 
     - name: Upload Parsers
       uses: actions/upload-artifact@v4
       with:
-        name: language-parsers
+        name: language-parsers-${{ matrix.os }}
         path: parsers
 
   validate:
     needs: clone_vendors
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -56,7 +65,7 @@ jobs:
     - name: Download parsers
       uses: actions/download-artifact@v4
       with:
-        name: language-parsers
+        name: language-parsers-${{ matrix.os }}
         path: parsers
 
     - name: Install uv
@@ -83,7 +92,11 @@ jobs:
       run: uv run --no-sync pre-commit run --show-diff-on-failure --color=always --all-files
   test:
     needs: clone_vendors
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, windows-latest]
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -91,7 +104,7 @@ jobs:
     - name: Download parsers
       uses: actions/download-artifact@v4
       with:
-        name: language-parsers
+        name: language-parsers-${{ matrix.os }}
         path: parsers
 
     - name: Install uv
@@ -119,6 +132,7 @@ jobs:
       run: uv run --no-sync setup.py build_ext --inplace
 
     - name: Test
+      shell: bash
       run: uv run --no-sync pytest tests -v
       env:
         PROJECT_ROOT: ${{github.workspace}}
