--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -91,7 +91,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: "3.13"
+        python-version: ["3.13"]
         include:
           - os: windows-latest
             python-version: "3.12"
