--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dev = [
   "pytest>=8.3.4",
   "ruff>=0.9.9",
   "setuptools>=75.8.2",
+  "tomli>=2.2.1; python_version<'3.11'",
   "types-setuptools>=75.8.2.20250301",
   "typing-extensions>=4.12.2",
 ]
