--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -97,7 +97,7 @@ jobs:
     needs: clone_vendors
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-15, windows-latest]
+        os: [ubuntu-latest, macos-15, windows-latest, ubuntu-24.04-arm]
     name: Build wheel on ${{matrix.os}}
     runs-on: ${{matrix.os}}
     steps:
