--- a/.github/workflows/build_and_publish.yaml
+++ b/.github/workflows/build_and_publish.yaml
@@ -3,153 +3,111 @@ name: Build and Publish
 on:
   release:
     types: [published]
+  pull_request:
+    paths:
+      - '.github/workflows/build_and_publish.yaml'
+
 jobs:
   clone_vendors:
     name: Clone vendors
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-
-      - name: Install tree-sitter cli
-        run: npm install -g tree-sitter-cli
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+      - run: npm install -g tree-sitter-cli
+      - uses: astral-sh/setup-uv@v5
         with:
           enable-cache: true
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
-          python-version-file: "pyproject.toml"
-
-      - name: Install Dependencies
-        run: uv sync --no-install-project
-
-      - name: Clone vendors
-        run: |
+          python-version: "3.12"
+      - run: uv sync --no-install-project
+      - run: |
           mkdir parsers
           uv run --no-sync scripts/clone_vendors.py
-
-      - name: Upload Parsers
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: language-parsers
           path: parsers
+
   build-sdist:
     needs: clone_vendors
     name: Build SDist
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Download parsers
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
         with:
           name: language-parsers
           path: parsers
-
-      - name: Install uv
-        uses: astral-sh/setup-uv@v5
+      - uses: astral-sh/setup-uv@v5
         with:
           enable-cache: true
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
-          python-version-file: "pyproject.toml"
-
-      - name: Install Dependencies
-        run: uv sync --no-install-project
-
-      - name: Set path in environment
-        run: echo "PROJECT_ROOT=${{ github.workspace }}" >> $GITHUB_ENV
-
-      - name: Cache Bindings
+          python-version: "3.12"
+      - run: uv sync --no-install-project
+      - run: echo "PROJECT_ROOT=${{ github.workspace }}" >> $GITHUB_ENV
+      - uses: actions/cache@v4
         id: cache-bindings
-        uses: actions/cache@v4
         with:
           path: tree_sitter_language_pack/bindings
-          key: ${{ hashFiles('sources/*') }}-language-definitions
-
+          key: ubuntu-build-${{ hashFiles('sources/**/*', 'parsers/**/*', 'setup.py') }}
       - name: Build Extensions
         if: steps.cache-bindings.outputs.cache-hit != 'true'
         run: uv run setup.py build_ext --inplace
         env:
           PROJECT_ROOT: ${{github.workspace}}
-
-      - name: Build sdist
-        run: uv build --sdist
+      - run: uv build --sdist
         env:
           PROJECT_ROOT: ${{github.workspace}}
-
       - uses: actions/upload-artifact@v4
         with:
           name: dist-sdist
-          if-no-files-found: error
           path: dist
+
   build-wheels:
     needs: clone_vendors
+    name: Build Wheels
     strategy:
       matrix:
         os: [ubuntu-latest, macos-15, windows-latest, ubuntu-24.04-arm]
-    name: Build wheel on ${{matrix.os}}
-    runs-on: ${{matrix.os}}
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+    runs-on: ${{ matrix.os }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: language-parsers
+          path: parsers
+      - uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - run: uv sync --no-install-project
+      - run: echo "PROJECT_ROOT=${{ github.workspace }}" >> $GITHUB_ENV
+      - uses: actions/cache@v4
+        id: cache-bindings
+        with:
+          path: tree_sitter_language_pack/bindings
+          key: ${{ matrix.os }}-${{ matrix.python-version }}-build-${{ hashFiles('sources/**/*', 'parsers/**/*', 'setup.py') }}
+      - name: Build Extensions
+        if: steps.cache-bindings.outputs.cache-hit != 'true'
+        run: uv run setup.py build_ext --inplace
+        env:
+          PROJECT_ROOT: ${{github.workspace}}
+      - run: uv build --wheel
+        env:
+          PROJECT_ROOT: ${{github.workspace}}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: wheel-${{ matrix.os }}-py${{ matrix.python-version }}
+          path: dist
 
-    - name: Download parsers
-      uses: actions/download-artifact@v4
-      with:
-        name: language-parsers
-        path: parsers
-
-    - name: Install uv
-      uses: astral-sh/setup-uv@v5
-      with:
-        enable-cache: true
-
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version-file: "pyproject.toml"
-
-    - name: Install Dependencies
-      run: uv sync --no-install-project
-
-    - name: Set path in environment
-      run: echo "PROJECT_ROOT=${{ github.workspace }}" >> $GITHUB_ENV
-
-    - name: Cache Bindings
-      id: cache-bindings
-      uses: actions/cache@v4
-      with:
-        path: tree_sitter_language_pack/bindings
-        key: ${{ matrix.os }}-build-${{ hashFiles('sources/**/*', 'parsers/**/*', 'setup.py') }}
-
-    - name: Build Extensions
-      if: steps.cache-bindings.outputs.cache-hit != 'true'
-      run: uv run setup.py build_ext --inplace
-      env:
-        PROJECT_ROOT: ${{github.workspace}}
-
-    - name: Build wheel
-      run: uv build --wheel
-      env:
-        PROJECT_ROOT: ${{github.workspace}}
-
-    - uses: actions/upload-artifact@v4
-      with:
-        name: dist-wheel-${{ matrix.os }}-${{ strategy.job-index }}
-        if-no-files-found: error
-        path: dist
   publish:
+    if: github.event_name == 'release'
     name: Publish Python package
     needs: [build-sdist, build-wheels]
     runs-on: ubuntu-latest
@@ -157,12 +115,9 @@ jobs:
     permissions:
       id-token: write
     steps:
-    - name: Download build artifacts
-      uses: actions/download-artifact@v4
-      with:
-        path: dist
-        pattern: dist-*
-        merge-multiple: true
-
-    - name: Publish to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
+      - uses: actions/download-artifact@v4
+        with:
+          path: dist
+          pattern: "*"
+          merge-multiple: true
+      - uses: pypa/gh-action-pypi-publish@release/v1
