chore: resolved sdist issues

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,7 +42,7 @@ repos:
     rev: "v3.5.3"
     hooks:
       - id: prettier
-        exclude: ^tests|^.idea|^migrations|^.git|README.md|^docs
+        exclude: ^tests|^.idea|^migrations|^.git|README.md|CONTRIBUTING.md|^docs
   - repo: https://github.com/tox-dev/pyproject-fmt
     rev: "v2.6.0"
     hooks:
