--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [build-system]
 build-backend = "setuptools.build_meta"
 
-requires = [ "cython>=3.0.12", "setuptools>=80.9.0", "typing-extensions>=4.14.0" ]
+requires = [ "cython>=3.0.12", "setuptools>=80.9.0", "typing-extensions>=4.15.0" ]
 
 [project]
 name = "tree-sitter-language-pack"
-version = "0.9.0"
+version = "0.9.1"
 description = "Comprehensive collection of 160+ tree-sitter language parsers"
 readme = "README.md"
 keywords = [
@@ -36,10 +36,10 @@ classifiers = [
   "Typing :: Typed",
 ]
 dependencies = [
-  "tree-sitter>=0.23.2",
-  "tree-sitter-c-sharp>=0.23.1",
-  "tree-sitter-embedded-template>=0.23.2",
-  "tree-sitter-yaml>=0.7.0",
+  "tree-sitter==0.23.2",
+  "tree-sitter-c-sharp==0.23.1",
+  "tree-sitter-embedded-template==0.23.2",
+  "tree-sitter-yaml==0.7.0",
 ]
 
 urls.documentation = "https://github.com/Goldziher/tree-sitter-language-pack#readme"
@@ -49,16 +49,16 @@ urls.repository = "https://github.com/Goldziher/tree-sitter-language-pack"
 
 [dependency-groups]
 dev = [
-  "anyio>=4.9.0",
-  "gitpython>=3.1.44",
-  "mypy>=1.16.0",
-  "pre-commit>=4.2.0",
-  "pytest>=8.4.0",
-  "ruff>=0.11.13",
+  "anyio>=4.10.0",
+  "gitpython>=3.1.45",
+  "mypy>=1.18.2",
+  "pre-commit>=4.3.0",
+  "pytest>=8.4.2",
+  "ruff>=0.13.1",
   "setuptools>=80.9.0",
   "tomli>=2.2.1; python_version<'3.11'",
-  "types-setuptools>=80.9.0.20250529",
-  "typing-extensions>=4.14.0",
+  "types-setuptools>=80.9.0.20250822",
+  "typing-extensions>=4.15.0",
   "uv-bump",
 ]
 
